# ops-web-requirements

./: Dockerfile  package.json  pyproject.toml  requirements.in  requirements.txt
.github/: dependabot.yaml
