[project]
name = "ops-web"
version = "2025.10"
description = "Web-based control center for many things in Technical Sales"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler==3.11.0",
    "azure-ai-translation-document==1.1.0",
    "azure-identity==1.21.0",
    "azure-mgmt-compute==34.0.0",
    "azure-mgmt-network==28.1.0",
    "azure-mgmt-storage==22.0.0",
    "azure-mgmt-subscription==3.1.1",
    "azure-storage-blob==12.24.1",
    "azure-storage-file-datalake==12.18.1",
    "boto3==1.37.11",
    "botocore==1.37.11",
    "elastic-apm==6.23.0",
    "flask==3.1.0",
    "fort==2024.2",
    "google-api-python-client==2.161.0",
    "google-auth==2.38.0",
    "google-cloud-storage==3.0.0",
    "icalendar==6.1.1",
    "lxml==5.3.1",
    "markdown==3.7",
    "notch==2023.1",
    "oauth2client==4.1.3",
    "psycopg2-binary==2.9.10",
    "pyjwt==2.10.1",
    "requests==2.32.3",
    "unidecode==1.3.8",
    "waitress==3.0.2",
    "werkzeug==3.1.3",
    "whitenoise==6.9.0",
    "xlsxwriter==3.2.2",
]

[tool.uv]
package = false
